[project]
name = "comfyui-psd2png"
description = "Nodes: Psd2Png."
version = "1.0.0"
license = "LICENSE"
dependencies = ["psd_tools~=1.9.28"]

[project.urls]
Repository = "https://github.com/violet-chen/comfyui-psd2png"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "71e95c52-3653-4fd3-a3fb-f79a4a7ba52e"
DisplayName = "comfyui-psd2png"
Icon = ""
